[gd_scene load_steps=6 format=3 uid="uid://cviyouhigqtqh"]

[ext_resource type="Texture2D" uid="uid://dnihehdmifw5i" path="res://resources/icons8-arrow-down-32.png" id="1"]
[ext_resource type="FontFile" uid="uid://dc0j4umwc1e4i" path="res://DarkTheme/Fonts/Ubuntu-L.ttf" id="2"]
[ext_resource type="Script" path="res://Scripts/Orbit_control.gd" id="3"]
[ext_resource type="PackedScene" path="res://Scenes/SpinBox.tscn" id="4"]

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("2")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[node name="Orbit" type="VBoxContainer"]
offset_top = 46.0
offset_right = 496.0
offset_bottom = 79.0
script = ExtResource("3")

[node name="Control" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="Control"]
layout_mode = 2
size_flags_horizontal = 3
text = "Orbit_01"

[node name="ColorPickerButton" type="ColorPickerButton" parent="Control"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_fonts/font = SubResource("2")

[node name="TextureButton" type="TextureButton" parent="Control"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("1")

[node name="Configs" type="GridContainer" parent="."]
layout_mode = 2
columns = 2

[node name="Label_apo" type="Label" parent="Configs"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "apoapsis"

[node name="apo_in" parent="Configs" instance=ExtResource("4")]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
step = 0.001
value = 100.0
allow_greater = true
allow_lesser = true

[node name="Label_peri" type="Label" parent="Configs"]
layout_mode = 2
size_flags_horizontal = 3
text = "periapsis"

[node name="peri_in" parent="Configs" instance=ExtResource("4")]
custom_minimum_size = Vector2(124, 0)
layout_mode = 2
step = 0.001
value = 100.0
allow_greater = true
allow_lesser = true

[node name="Label_major" type="Label" parent="Configs"]
layout_mode = 2
size_flags_horizontal = 3
text = "semi major axis"

[node name="major_in" parent="Configs" instance=ExtResource("4")]
layout_mode = 2
max_value = 0.0
step = 0.001
allow_greater = true

[node name="Label_minor" type="Label" parent="Configs"]
layout_mode = 2
size_flags_horizontal = 3
text = "semi minor axis"

[node name="minor_in" parent="Configs" instance=ExtResource("4")]
layout_mode = 2
max_value = 0.0
step = 0.001
allow_greater = true

[node name="Label_Ecc" type="Label" parent="Configs"]
layout_mode = 2
size_flags_horizontal = 3
text = "eccentricity"

[node name="Ecc_in" parent="Configs" instance=ExtResource("4")]
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="Label_incl" type="Label" parent="Configs"]
layout_mode = 2
size_flags_horizontal = 3
text = "inclination"

[node name="Incl_in" parent="Configs" instance=ExtResource("4")]
layout_mode = 2
min_value = -180.0
max_value = 180.0
step = 0.01

[node name="Label_aoa" type="Label" parent="Configs"]
layout_mode = 2
size_flags_horizontal = 3
text = "Longitude of asc. Node"

[node name="aoa_in" parent="Configs" instance=ExtResource("4")]
layout_mode = 2
max_value = 360.0
step = 0.1

[node name="Label_aop" type="Label" parent="Configs"]
layout_mode = 2
size_flags_horizontal = 3
text = "Argument of periapsis"

[node name="aop_in" parent="Configs" instance=ExtResource("4")]
layout_mode = 2
max_value = 360.0
step = 0.1

[node name="Label_pos" type="Label" parent="Configs"]
layout_mode = 2
size_flags_horizontal = 3
text = "True anomaly"

[node name="pos_in" parent="Configs" instance=ExtResource("4")]
layout_mode = 2
max_value = 360.0
step = 0.1

[node name="Button" type="Button" parent="Configs"]
layout_mode = 2
size_flags_horizontal = 0
text = "Remove"

[connection signal="color_changed" from="Control/ColorPickerButton" to="." method="_on_ColorPickerButton_color_changed"]
[connection signal="toggled" from="Control/TextureButton" to="." method="_on_TextureButton_toggled"]
[connection signal="value_changed" from="Configs/apo_in" to="." method="_on_apo_in_value_changed"]
[connection signal="value_changed" from="Configs/peri_in" to="." method="_on_peri_in_value_changed"]
[connection signal="value_changed" from="Configs/major_in" to="." method="_on_major_in_value_changed"]
[connection signal="value_changed" from="Configs/minor_in" to="." method="_on_minor_in_value_changed"]
[connection signal="value_changed" from="Configs/Ecc_in" to="." method="_on_Ecc_in_value_changed"]
[connection signal="value_changed" from="Configs/Incl_in" to="." method="_on_Incl_in_value_changed"]
[connection signal="value_changed" from="Configs/aoa_in" to="." method="_on_aoa_in_value_changed"]
[connection signal="value_changed" from="Configs/aop_in" to="." method="_on_aop_in_value_changed"]
[connection signal="value_changed" from="Configs/pos_in" to="." method="_on_pos_in_value_changed"]
[connection signal="pressed" from="Configs/Button" to="." method="_on_Button_pressed"]
